--- a/README
+++ b/README
@@ -1,6 +1,9 @@
 Installation:
 
     git clone git@github.com:itsdtr/dotvim.git
+    cd ~/.vim
+    git submodule init
+    git submodule update
 
 Create symlink:
 
